cc_library(
    name = "io_input_enums",
    hdrs = [
        "InputEnums.h",
        "InputEnumFunctions.h",
    ],
    deps = [
        "//src/Library/Platform/Interface:library_platform_interface",
        "//src/Library/Serialization:library_serialization",
        "//src/Utility:utility",
    ],
    visibility = ["//visibility:public"],
)

# Header-only target: Mouse.h without depending on io (which depends on engine).
# Needed so engine can include Io/Mouse.h via EngineIocContainer.h without a cycle.
cc_library(
    name = "io_mouse",
    hdrs = ["Mouse.h"],
    deps = [
        "//src/Engine:engine_base",
        "//src/Engine/Objects:engine_objects",
        "//src/Library/Geometry:library_geometry",
    ],
    visibility = ["//visibility:public"],
)

# Header-only target: keyboard headers without depending on engine.
# Needed by gui_window_base so engine can include GUIWindow.h without:
#   engine -> gui_window_base -> io -> engine cycle.
cc_library(
    name = "io_keyboard_base",
    hdrs = [
        "KeyboardController.h",
        "KeyboardActionMapping.h",
        "KeyboardInputHandler.h",
    ],
    deps = [
        ":io_input_enums",
        "//src/Application:application_config",
        "//src/Engine/Time:engine_time",
        "//src/Library/Platform/Filters:library_platform_filters",
        "//src/Library/Platform/Interface:library_platform_interface",
        "//src/Library/Platform/Proxy:library_platform_proxy",
        "//src/Utility:utility",
    ],
    visibility = ["//visibility:public"],
)

# Mouse.cpp and KeyboardInputHandler.cpp include GUI headers — circular with gui -> gui_ui -> io.
# Compiled in //src/Engine:engine_impl which depends on both io and gui.
exports_files(
    ["Mouse.cpp", "KeyboardInputHandler.cpp"],
    visibility = ["//src/Engine:__pkg__"],
)

cc_library(
    name = "io",
    srcs = [
        "KeyboardController.cpp",
        "InputEnumFunctions.cpp",
        "KeyboardActionMapping.cpp",
        # KeyboardInputHandler.cpp and Mouse.cpp compiled in //src/Engine:engine_impl (need gui headers)
    ],
    hdrs = [
        "KeyboardController.h",
        "InputEnums.h",
        "InputEnumFunctions.h",
        "KeyboardActionMapping.h",
        "KeyboardInputHandler.h",
        "Mouse.h",
    ],
    deps = [
        "//src/Engine:engine",
        "//src/Engine/Objects:engine_objects",
        "//src/Library/Geometry:library_geometry",
        "//src/Library/Platform/Filters:library_platform_filters",
        "//src/Library/Platform/Interface:library_platform_interface",
        "//src/Library/Platform/Proxy:library_platform_proxy",
        "//src/Library/Serialization:library_serialization",
    ],
    visibility = ["//visibility:public"],
)
